# commons-1c

./: .gitignore  README.md  commons_1c.py  pyproject.toml  requirements.txt  setup.py  tests.py
.dev/: pyproject.toml
commons_1c/: __about__.py  __init__.py  commons_1c.py  platform_.py  version.py
src/commons_1c/: platform_.py
tests/: test_commons_1c.py
