[tool.poetry]
name = "commons-1c"
version = "3.6.1"
description = "Commons for 1C:Enterprise"
authors = ["Cujoko <cujoko@gmail.com>"]
packages = [{include = "commons_1c"}]
license = "MIT"
repository = "https://github.com/Cujoko/commons-1c"
keywords = ["1c", "commons"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
cjk-commons = "^3.6.1"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
pytest = "^7.2.1"
rope = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
